[package]
name = "trpk-it"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
mongodb = { version = "2.2.2", default-features = false, features = ["async-std-runtime"] }
rand = "0.8.5"
serde = "1.0.139"
url = { version = "2.2.2", features = ["serde"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

[profile.release]
opt-level = 'z'